--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.0.1",
     "connected-react-router": "^6.9.1",
     "cors": "^2.8.5",
+    "json-server": "^0.14.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.0",
     "node-sass": "^6.0.0",
